feat(auth): setup Clerk auth, Drizzle ORM, Neon DB & onboarding flow

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "commitlint": "commitlint --edit"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.35.1",
+    "@neondatabase/serverless": "^1.0.2",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.7",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
@@ -23,10 +27,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.7",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "husky": "^9.1.7",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
