--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@blocknote/core": "^0.42.3",
     "@blocknote/mantine": "^0.42.3",
     "@blocknote/react": "^0.42.3",
+    "@clerk/backend": "^2.24.0",
     "@clerk/nextjs": "^6.35.1",
     "@dicebear/collection": "^9.2.4",
     "@dicebear/core": "^9.2.4",
